--- a/lab-python-list-comprehension.ipynb
+++ b/lab-python-list-comprehension.ipynb
@@ -75,6 +75,113 @@
     "\n",
     "```\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "81e868e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialize_inventory(products):\n",
+    "    inventory = {product: int(input(f\"Enter the quantity of {product} available: \")) for product in products}# ask user to input the quantity of each product\n",
+    "    return inventory\n",
+    "  \n",
+    "\n",
+    "def get_customer_orders(products):\n",
+    "    customer_orders = set() # empty set to store the customer orders\n",
+    "    quantity = int(input(\"Enter the number of customers order: \")) # ask user to input the quantity of customer orders\n",
+    "    customer_orders = set(input(f\"Please enter the product you want between {products}: \") for i in range(quantity))\n",
+    "\n",
+    "    print(\"Customer orders:\")\n",
+    "    print(customer_orders)\n",
+    "\n",
+    "    return customer_orders    \n",
+    "\n",
+    "def update_inventory(customer_orders, inventory):\n",
+    "    inventory = {product: count - int(product in customer_orders) for product, count in inventory.items() if count - int(product in customer_orders) > 0}\n",
+    "    return inventory\n",
+    "\n",
+    "def calculate_order_statistics(customer_orders, products):\n",
+    "    total_products_ordered = len(customer_orders) # count the total number of products ordered\n",
+    "    total_products = len(products) # count the total number of products available\n",
+    "    percentage = total_products_ordered/total_products*100 # calculate the percentage of products ordered\n",
+    "    order_status = (total_products_ordered, percentage) # tuple of total products ordered and percentage\n",
+    "    return order_status\n",
+    "\n",
+    "def print_order_statistics(order_statistics):\n",
+    "    print(\"Order Statistics:\")\n",
+    "    print(\"Total Products Ordered:\", order_statistics[0])\n",
+    "    print(\"Percentage of Products Ordered:\", order_statistics[1], \"%\")\n",
+    "\n",
+    "def print_updated_inventory(inventory):\n",
+    "    print(\"Updated Inventory:\")\n",
+    "    [print(f\"{key}: {value}\") for key, value in inventory.items()]\n",
+    "        \n",
+    "\n",
+    "def total_price(customer_orders):\n",
+    "    prices = {product: int(input(f\"Enter the price of {product}: \")) for product in customer_orders} # ask user to input the price of each product\n",
+    "    print(\"Total Price:\", sum(prices.values()))\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "3c8c1384",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    products = [\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"] # list of products\n",
+    "    inventory = initialize_inventory(products) # initialize the inventory\n",
+    "    print(inventory)\n",
+    "    print()\n",
+    "    customer_orders = get_customer_orders(products) # get the customer orders\n",
+    "    inventory = update_inventory(customer_orders, inventory) # update the inventory\n",
+    "    order_status = calculate_order_statistics(customer_orders, products) # calculate the order statistics\n",
+    "    print()\n",
+    "    print_order_statistics(order_status) # print the order statistics\n",
+    "    print()\n",
+    "    print_updated_inventory(inventory) # print the updated inventory\n",
+    "    print()\n",
+    "    total_price(customer_orders)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "3799b827",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'t-shirt': 5, 'mug': 4, 'hat': 3, 'book': 2, 'keychain': 1}\n",
+      "\n",
+      "Customer orders:\n",
+      "{'hat', 'keychain'}\n",
+      "\n",
+      "Order Statistics:\n",
+      "Total Products Ordered: 2\n",
+      "Percentage of Products Ordered: 40.0 %\n",
+      "\n",
+      "Updated Inventory:\n",
+      "t-shirt: 5\n",
+      "mug: 4\n",
+      "hat: 2\n",
+      "book: 2\n",
+      "\n",
+      "Total Price: 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
@@ -93,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
